--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,10 +27,10 @@ jobs:
     - uses: actions/checkout@v1
     - name: Android
       run: |
-        cd Blank
+        cd ThePage/src
         nuget restore
-        cd Blank.Android
-        msbuild Blank.Android.csproj /verbosity:normal /t:Rebuild /p:Configuration=Debug
+        cd ThePage.Droid
+        msbuild ThePage.Droid.csproj /verbosity:normal /t:Rebuild /p:Configuration=Debug
         
   iOS:
     runs-on: macos-latest
@@ -38,6 +38,6 @@ jobs:
     - uses: actions/checkout@v1
     - name: iOS
       run: |
-        cd Blank
+        cd ThePage/src
         nuget restore
-        msbuild Blank.iOS/Blank.iOS.csproj /verbosity:normal /t:Rebuild /p:Platform=iPhoneSimulator /p:Configuration=Debug
+        msbuild ThePage.iOS/ThePage.iOS.csproj /verbosity:normal /t:Rebuild /p:Platform=iPhoneSimulator /p:Configuration=Debug
