--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,6 +15,8 @@ jobs:
       run: |
         echo "RESTORE",
         ls
+        echo "CD to ThePage",
+        cd ThePage
         dotnet restore
     - name: Build
       run: |
