--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Restore dependencies
       run: |
         cd ThePage
-        dotnet restore
+        dotnet restore --include-transitive
     - name: Build
       run: |
         cd ThePage
